bump dependencies 22/01/25